Update DebugBridge for 26.2 snapshot 5